--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,8 @@
   --secondary-color: #ed2853;
   --border-color: #e9e9e9;
   --primary-font-color: rgb(72, 71, 71);
-  --secondary-font-color: #bec1c0;
+  --secondary-font-color: #909393;
+  --button-color: #bec1c0;
 }
 
 html,
@@ -92,13 +93,13 @@ body {
 .login-form [type='submit'] {
   margin: 1.8rem 2.5rem 0;
   background: none;
-  border: 3px solid var(--border-color);
+  border: 3px solid var(--button-color);
   display: inline-block;
   width: 12rem;
   height: 4rem;
   font-weight: 700;
   font-size: 1rem;
-  color: var(--secondary-font-color);
+  color: var(--button-color);
   cursor: pointer;
   transition: background-color 0.15s,
   border-color 0.15s,
